bamoe-app/4-bamoe-services/2-management-console/management-console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: management-console
  name: management-console
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: management-console
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: management-console
    spec:
      containers:
        - env:
            - name: QUARKUS_HTTP_CORS_ORIGINS
              value: /.*/
            - name: RUNTIME_TOOLS_MANAGEMENT_CONSOLE_DATA_INDEX_ENDPOINT
              value: http://data-index.bamoe-app.svc.cluster.local:8080/graphql
            - name: RUNTIME_TOOLS_MANAGEMENT_CONSOLE_KOGITO_ENV_MODE
              value: DEV
          image: quay.io/bamoe/management-console:9.1.0-ibm-0001
          name: bamoe-poc-management-console
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /home/kogito/data/svg
              name: management-console-claim0
      restartPolicy: Always
      volumes:
        - name: management-console-claim0
          persistentVolumeClaim:
            claimName: management-console-claim0
