bamoe-app/4-bamoe-services/2-management-console/management-console-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: management-console-ingress
  namespace: bamoe-app
  labels:
    app.kubernetes.io/component: management-console
    app.kubernetes.io/instance: management-console
    app.kubernetes.io/name: management-console
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: public-iks-k8s-nginx
  rules:
    - host: mgmt-console.bamoe-canvas-3cd0ec11030dfa215f262137faf739f1-0000.eu-gb.containers.appdomain.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: management-console
                port:
                  name: http
